# aioircd

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  VERSION  aioircd.py  requirements.txt  setup.cfg  setup.py  tests.py
.github/workflows/: packaging.yml  testing.yml
aioircd/: __init__.py  __main__.py  channel.py  config.py  exceptions.py  sdnotify.py  server.py  states.py  user.py
tests/: common.py  test_protocole.py
