[metadata]
name = aioircd
version = file:VERSION
description = A minimalist asynchronous IRC server
long_description = file:README.md
long_description_content_type = text/markdown'
author = Astremy, DrLazor
author_email = astremy.com@gmail.com, julien.castiaux@gmail.com
url = https://github.com/readthedocs-fr/aioircd
download_url = https://pypi.drlazor.be/aioircd/
license = MIT
classifiers =
  Environment :: No Input/Output (Daemon)
  Framework :: AsyncIO
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
  Topic :: Communications :: Chat :: Internet Relay Chat
