[metadata]
name = aioircd
version = file:version.txt
description = A minimalist asynchronous IRC server
long_description = file:README.md
long_description_content_type = text/markdown
author = Julien Castiaux
author_email = julien.castiaux@gmail.com
url = https://github.com/readthedocs-fr/aioircd
download_url = https://pypi.python.org/aioircd/
license = MIT
classifiers =
  Environment :: No Input/Output (Daemon)
  Framework :: AsyncIO
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
  Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = aioircd
python_requires = >=3.9
install_requires =
  trio
